fixed almost issue