@@ -1,92 +1,101 @@
 package com.daviddai.blog.config;
 
-import java.util.Arrays;
-import java.util.List;
-
-import com.daviddai.blog.security.JwtAuthenticationFilter;
-import com.daviddai.blog.security.UserDetailsServiceImpl;
-
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
-import org.springframework.security.authentication.AuthenticationManager;
-import org.springframework.security.authentication.AuthenticationProvider;
-import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
-import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
+import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
-import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
-import org.springframework.security.crypto.password.PasswordEncoder;
+import org.springframework.security.oauth2.server.resource.authentication.JwtAuthenticationConverter;
+import org.springframework.security.oauth2.server.resource.authentication.JwtGrantedAuthoritiesConverter;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.web.cors.CorsConfiguration;
 
-import lombok.RequiredArgsConstructor;
+import java.util.Arrays;
+import java.util.List;
+
+import com.daviddai.blog.config.CustomAuthoritiesConverter;
 
 @Configuration
 @EnableWebSecurity
-@RequiredArgsConstructor
+@EnableMethodSecurity
 public class SecurityConfig {
 
-    private final UserDetailsServiceImpl userDetailsService;
-    private final JwtAuthenticationFilter jwtAuthenticationFilter;
+    @Value("${cors.allowed-origins:https://yourblog.com}")
+    private String corsAllowedOrigins;
 
-    @Value("${cors.allowed-origins}")
-    private String[] allowedOrigins;
+    private static final String[] PUBLIC_READ_ENDPOINTS = {
+            "/api/posts/**",
+            "/api/categories/**",
+            "/api/tags/**"
+    };
 
-    private final String[] WHITE_LIST = {
-            "/api/auth/**",
+    private static final String[] HEALTH_ENDPOINTS = {
+            "/actuator/health",
+            "/actuator/info"
+    };
+
+    private static final String[] SWAGGER_ENDPOINTS = {
+            "/api/docs/**",
+            "/v3/api-docs/**",
+            "/swagger-ui/**",
+            "/swagger-ui.html"
     };
 
     @Bean
-    public PasswordEncoder getPasswordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
-
-    @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
-
         http.cors(cors -> cors.configurationSource(request -> {
-            CorsConfiguration config = new CorsConfiguration();
-            config.setAllowedOrigins(Arrays.asList(allowedOrigins));
-            config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE"));
-            config.setAllowedHeaders(List.of("*"));
-            config.setAllowCredentials(true);
-            config.setMaxAge(3600L);
-            return config;
+            CorsConfiguration cfg = new CorsConfiguration();
+            cfg.setAllowedOrigins(Arrays.stream(corsAllowedOrigins.split(","))
+                    .map(String::trim).toList());
+            cfg.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
+            cfg.setAllowedHeaders(List.of("*"));
+            cfg.setExposedHeaders(List.of("Location", "Link", "X-Total-Count"));
+            cfg.setAllowCredentials(true);
+            cfg.setMaxAge(3600L);
+            return cfg;
         }));
 
         http.csrf(AbstractHttpConfigurer::disable);
 
-        http.authorizeHttpRequests(req -> req
-                .requestMatchers(WHITE_LIST).permitAll()
-                .requestMatchers(HttpMethod.GET, "/api/posts/**").permitAll()
-                .requestMatchers(HttpMethod.GET, "/api/categories/**").permitAll()
-                .requestMatchers(HttpMethod.GET, "/api/tags/**").permitAll()
-                .anyRequest()
-                .authenticated());
+        http.authorizeHttpRequests(auth -> auth
+                .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
 
-        http.sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
-        http.authenticationProvider(provider());
-        http.addFilterBefore(jwtAuthenticationFilter, UsernamePasswordAuthenticationFilter.class);
+                .requestMatchers(HttpMethod.GET, PUBLIC_READ_ENDPOINTS).permitAll()
+                .requestMatchers(HttpMethod.GET, HEALTH_ENDPOINTS).permitAll()
 
+                .requestMatchers(SWAGGER_ENDPOINTS).permitAll()
+
+                .requestMatchers(HttpMethod.POST, "/api/posts/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.PUT, "/api/posts/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.PATCH, "/api/posts/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.DELETE, "/api/posts/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.POST, "/api/categories/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.PUT, "/api/categories/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.PATCH, "/api/categories/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.DELETE, "/api/categories/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.POST, "/api/tags/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.PUT, "/api/tags/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.PATCH, "/api/tags/**").hasRole("ADMIN")
+                .requestMatchers(HttpMethod.DELETE, "/api/tags/**").hasRole("ADMIN")
+
+                .requestMatchers(HttpMethod.POST, "/api/comments/**").authenticated()
+                .anyRequest().authenticated());
+
+        http.oauth2ResourceServer(oauth2 -> oauth2
+                .jwt(jwt -> jwt.jwtAuthenticationConverter(jwtAuthenticationConverter())));
+
+        http.sessionManagement(sess -> sess.sessionCreationPolicy(SessionCreationPolicy.STATELESS));
         return http.build();
     }
 
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
-        return config.getAuthenticationManager();
+    public JwtAuthenticationConverter jwtAuthenticationConverter() {
+        JwtAuthenticationConverter conv = new JwtAuthenticationConverter();
+        conv.setJwtGrantedAuthoritiesConverter(new CustomAuthoritiesConverter()); // nhớ prefix ROLE_
+        return conv;
     }
-
-    @Bean
-    public AuthenticationProvider provider() {
-        DaoAuthenticationProvider provider = new DaoAuthenticationProvider();
-        provider.setUserDetailsService(userDetailsService);
-        provider.setPasswordEncoder(getPasswordEncoder());
-        return provider;
-    }
-
 }
